--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,11 @@
+<h1>To Do List</h1>
+
+<% @all_tasks.each do |row| %>
+  <% row.each do |element| %>
+    <%= element %>
+  <% end %><br>
+<% end %>
+
 <form action="" method="post" accept-charset="utf-8">
   <fieldset>
     <legend>Task List</legend>
@@ -9,5 +17,5 @@
 </form>
 
 <pre>
-  <%= params %>
+  <%= @all_tasks %>
 </pre>
