--- a/views/index.erb
+++ b/views/index.erb
@@ -6,15 +6,7 @@
   <% end %><br>
 <% end %>
 
-<form action="" method="post" accept-charset="utf-8">
-  <fieldset>
-    <legend>Task List</legend>
-    <label>Task Name<input type="text" name="name" value="" id="name"></label>
-    <label>Description<input type="text" name="description" value="" id="description"></label>
-    <label>Completed Date<input type="text" name="completed_date" value="" id="completed_date"></label>
-  </fieldset>
-  <input type="submit" value="Add Task">
-</form>
+<a href="add_task">Add a Task!</a>
 
 <pre>
   <%= @all_tasks %>
