--- a/views/index.erb
+++ b/views/index.erb
@@ -1,13 +1,26 @@
+<head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 <h1>To Do List</h1>
 
-<% @all_tasks.each do |row| %>
-  <% row.each do |element| %>
-    <%= element %>
-  <% end %><br>
-<% end %>
+<table>
+
+  <tr>
+    <th>Task Number</th>
+    <th>Task Name</th>
+    <th>Description</th>
+    <th>Completed Date</th>
+  </tr>
+
+  <% @all_tasks.each_with_index do |task, index| %>
+    <tr class="rows">
+      <td><%= index + 1 %></td>
+      <td><%= task[1] %></td>
+      <td><%= task[2] %></td>
+      <td><%= task[3] %></td>
+    </tr>
+  <% end %>
+
+</table>
 
 <a href="add_task">Add a Task!</a>
-
-<pre>
-  <%= @all_tasks %>
-</pre>
