Work in progress Lunch.

--- a/views/add_task.erb
+++ b/views/add_task.erb
@@ -3,6 +3,7 @@
     <legend>Task List</legend>
     <label>Task Name<input type="text" name="name" value="" id="name"></label>
     <label>Description<input type="text" name="description" value="" id="description"></label>
+    <label>Complete By<input type="text" name="complete_by" value="" id="complete_by"></label>
     <label>Completed Date<input type="text" name="completed_date" value="" id="completed_date"></label>
   </fieldset>
   <input type="submit" value="Add Task">
