--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <h1>To Do List</h1>
+<a href="add_task">Add a Task!</a>
 
 <table>
 
@@ -23,7 +24,7 @@
       <td>
         <% if task[4] == "" %>
           <form class="" action="" method="post">
-            <label><input type="text" name="completed_date" value="mm/dd/yy" id="completed_date"></label>
+            <label><input type="text" name="completed_date" value="mm/dd/yy" id="completed_date" style="width: 75px;"></label>
             <input type="hidden" name="id" value="<%= index + 1 %>">
             <input type="submit" value="Add completed date">
           </form>
@@ -37,5 +38,3 @@
   <% end %>
 
 </table>
-
-<a href="add_task">Add a Task!</a>
